--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "core-js": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "swiper": "^11.2.5",
     "vue": "^3.5.13",
     "vue-router": "^4.0.13",
