--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.8.1",
     "core-js": "^3.8.3",
     "jwt-decode": "^4.0.0",
+    "marked": "^15.0.7",
     "swiper": "^11.2.5",
     "vue": "^3.5.13",
     "vue-router": "^4.0.13",
