--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,4 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 XAI_API_KEY=xxxxxxxx
 CHATANYWHERE_API_KEY=xxxxxxxxxxx
-CHATANYWHERE_URL=https://api.chatanywhere.com.cn
+CHATANYWHERE_URL=https://api.chatanywhere.tech
