--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.8.1",
     "core-js": "^3.8.3",
     "jwt-decode": "^4.0.0",
